--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="background">#F9F9F9</color>
     <color name="black">#000000</color>
+    <color name="white">#FFFFFF</color>
+    <color name="tab_background">#F3F3F3</color>
     <color name="transparent">#00000000</color>
     <color name="green">#13A634</color>
 </resources>
