Nav bottom & Fragments

--- a/app/src/main/res/layout/activity_init.xml
+++ b/app/src/main/res/layout/activity_init.xml
@@ -38,6 +38,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/varela"
         android:text="@string/please_enter_your_information_to_continue"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
