--- a/app/src/main/res/layout/fragment_weekly_current.xml
+++ b/app/src/main/res/layout/fragment_weekly_current.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragment.progress.weekly.WeeklyCurrentFragment">
 
-    <TextView
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/current_week_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Current" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
