--- a/app/src/main/res/layout/fragment_monthly_past.xml
+++ b/app/src/main/res/layout/fragment_monthly_past.xml
@@ -5,9 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".fragment.progress.monthly.MonthlyPastFragment">
 
-    <TextView
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/past_month_chart"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Past" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
