--- a/app/src/main/res/layout/fragment_all_time.xml
+++ b/app/src/main/res/layout/fragment_all_time.xml
@@ -27,11 +27,11 @@
 
     </com.google.android.material.card.MaterialCardView>
 
-    <FrameLayout
-        android:id="@+id/container_all_time_progress"
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/all_time_chart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
