--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,5 @@
     <color name="protien">#E13F3F</color>
     <color name="carb">#909D41</color>
     <color name="fat">#8197E5</color>
+    <color name="blue">#3352C3</color>
 </resources>
