--- a/app/src/main/res/layout/home_card_design.xml
+++ b/app/src/main/res/layout/home_card_design.xml
@@ -50,13 +50,14 @@
 
         <ImageView
             android:id="@+id/meal_done"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
+            android:clickable="true"
             android:contentDescription="@null"
-            android:src="@drawable/ic_baseline_check_circle_outline_24"
-            app:tint="@color/black" />
+            android:focusable="true"
+            android:src="@drawable/ic_baseline_check_circle_outline_24" />
 
 
     </LinearLayout>
